[package]
name = "rusty_js"
version = "0.1.0"
edition = "2021"

[dependencies]
deno_ast = "0.44.0"
deno_core = "0.326.0"
tokio = { version = "1.42.0", features = ["full"] }
serde = "1.0"
serde_json = "1.0"

#[profile.dev]
#opt-level = "z"
#strip = true  # Automatically strip symbols from the binary.
#to = true