[package]
name = "rusty_js"
version = "0.1.0"
edition = "2021"

[dependencies]
deno_core = "0.326.0"
tokio = { version = "1.42.0", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
deno_ast = { version = "0.42", features = ["transpiling"] }
data-url = "0.3.1"
reqwest = "0.12.12"
anyhow = "1.0.95"
ureq = "3.0.4"
http = "1.2.0"
druid = "0.8.3"

#[profile.dev]
#opt-level = "z"
#strip = true  # Automatically strip symbols from the binary.
#to = true